--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -1,8 +1,9 @@
-<div>
+<div class="form-row">
+  <div class="form-item">
     <label for="">Title</label>
     <input type="text" name="title" value="<%= book.title %>">
-</div>
-<div>
+  </div>
+  <div class="form-item">
     <label>Author</label>
     <select name="author">
     <% authors.forEach(author => { %>
@@ -14,14 +15,30 @@
     <% }) %>
     </select>
   </div>
-<div>
+</div>
+<div class="form-row">
+  <div class="form-item">
     <label for="">Publish Date</label>
     <input type="date" name="publishDate" value="<%= book.publishDate == null ? '' : book.publishDate.toISOString().split('T')[0] %>">
-</div>
-<div>
+  </div>
+  <div class="form-item">
     <label for="">Page Count</label>
     <input type="number" name="pageCount" min="1" value="<%= book.pageCount%>">
+  </div>
 </div>
+<div class="form-row">
+  <div class="form-item form-item-no-grow">
+    <label for="">Cover</label>
+    <input type="file" name="cover" class="filepond">
+  </div>
+  <div class="form-item">
+    <label for="">Description</label>
+    <textarea name="description"><%= book.description %> </textarea>
+  </div>
+</div>
+
+
+
 <div>
     <label for="">Cover</label>
     <input type="file" name="cover" class="filepond">
