--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,15 +11,14 @@
     <script defer src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
+    <link rel="stylesheet" href="/stylesheets/main.css">
     <title>Ourbrary</title>
 </head>
 <body>
-    Before
     <br>
     <%- include('../partials/header.ejs') %> 
     <%- include('../partials/errmsg.ejs') %> 
     <%- body  %> 
     <br>
-    After
 </body>
 </html>
