--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -12,13 +12,15 @@
     <script defer src="https://unpkg.com/filepond/dist/filepond.js"></script>
     <script defer src="/javascripts/fileUpload.js"></script>
     <link rel="stylesheet" href="/stylesheets/main.css">
-    <title>Ourbrary</title>
+    <title>Book Logger</title>
 </head>
 <body>
-    <br>
-    <%- include('../partials/header.ejs') %> 
-    <%- include('../partials/errmsg.ejs') %> 
-    <%- body  %> 
-    <br>
+    <div class="container">
+        <%- include('../partials/header.ejs') %> 
+        <div class="inner-container">
+        <%- include('../partials/errmsg.ejs') %> 
+        <%- body  %> 
+        </div>
+    </div>   
 </body>
 </html>
