--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 @import 'shared/variables.css';
 @import 'shared/fonts.css';
-
+@import 'shared/header.css';
+@import 'shared/buttons.css';
 
 :root {
     font-family: 'Roboto';
@@ -8,7 +9,7 @@
     color: var(--color-text-light)
 }
 
-*. *::before, *::after {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
@@ -24,4 +25,9 @@ body {
 
 .inner-container{
     margin: 0 2rem;
+}
+
+.page-header {
+    font-size: 2rem;
+    font-weight: 500;
 }
