--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,11 @@
 <header>
-    <nav>
-        <a href="/">Ourbrary</a>
+    <nav class="header-nav">
+        <a class="header-title" href="/">Book Logger</a>
         <ul>
-            <li><a href="/books">Books</a></li>
-            <li><a href="/books/new">New Book</a></li>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">New Author</a></li>
+            <li class="header-link"><a href="/books">Books</a></li>
+            <li class="header-link"><a href="/books/new">New Book</a></li>
+            <li class="header-link"><a href="/authors">Authors</a></li>
+            <li class="header-link"><a href="/authors/new">New Author</a></li>
         </ul>
     </nav>
 </header>
