--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav class="header-nav">
-        <a class="header-title" href="/">Book Logger</a>
+        <a class="header-title" href="/">LoggerHead</a>
         <ul>
             <li class="header-link"><a href="/books">Books</a></li>
             <li class="header-link"><a href="/books/new">New Book</a></li>
