--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Sign Up</title>
 </head>
 <body>
-    <h2>Login</h2>
-    <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Username">
+    <form action="/sign-up" method="POST">
+        <input type="text" name="userName" placeholder="User Name">
         <input type="password" name="password" placeholder="Password">
+        <input type="password" name="confirmPassword" placeholder="Confirm Password">
         <input type="submit">
-    </form>
-    <a href="/sign-up" method="GET">Sign Up</a>
 </body>
 </html>
