--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -7,6 +7,14 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <h2>Sign Up</h2>
+
+    <% if (locals.messages.errors) { %>
+        <% messages.errors.forEach( el => { %>
+            <div class="alert alert-danger"><%= el.msg %></div>
+        <% }) %>    
+    <% } %>
+    
     <form action="/sign-up" method="POST">
         <input type="text" name="userName" placeholder="User Name">
         <input type="password" name="password" placeholder="Password">
