--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h2 class="page-header">Recently Added</h2>
+<a href="/logout">Logout</a>
 
 
 <%- include('partials/bookGrid', { books : books, large:true }) %> 
