Add auth middleware

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,9 @@
             <li class="header-link"><a href="/books/new">New Book</a></li>
             <li class="header-link"><a href="/authors">Authors</a></li>
             <li class="header-link"><a href="/authors/new">New Author</a></li>
+            <li class="header-link"><a href="/logout">Logout</a></li>
+            
+
         </ul>
     </nav>
 </header>
